@@ -40,12 +40,17 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(444,root,root,755)
 %attr(555,-,-) /usr/bin/gnucash
 %attr(555,-,-) /usr/bin/gnc-prices
+%attr(555,-,-) /usr/share/gnucash/finance-quote-helper
 /usr/info/*
 /usr/lib/libgncengine.*
-/usr/share/gnucash
+/usr/share/gnucash/accounts
+/usr/share/gnucash/doc
+/usr/share/gnucash/html
+/usr/share/gnucash/scm
 /usr/share/gnome/help/gnucash
 /usr/share/gnome/apps/Applications/gnucash.desktop
 /usr/share/locale/*/LC_MESSAGES/gnucash.*mo
+/usr/share/pixmaps/gnucash
 /usr/man/*
 %config /etc/gnucash
 %doc AUTHORS COPYING ChangeLog HACKING NEWS README
